--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
   <title>documento</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,6 +24,13 @@
     <button type="submit">Pesquisar CEP</button>
 
   </form>
+
+  <div>
+    <h5>RESULTADO DA PESQUISA</h5>
+    <p id="Resultado"></p>
+  </div>
+
+  <script src="script.js"></script>
 
 </body>
 
