att do app de cep

--- a/index.html
+++ b/index.html
@@ -25,10 +25,25 @@
 
   </form>
 
-  <div>
-    <h5>RESULTADO DA PESQUISA</h5>
-    <p id="Resultado"></p>
-  </div>
+  <table class = "tabela-ceps">
+    <caption>
+      <h2>CEP's pesquisados </h2>
+    </caption>
+    <thead>
+      <tr>
+        <th>CEP</th>
+        <th>Logradouro</th>
+        <th>Bairro</th>
+        <th>Cidade</th>
+        <th>UF</th>
+        
+
+      </tr>
+    </thead>
+    <tbody id="tbody">
+      
+    </tbody>
+  </table>
 
   <script src="script.js"></script>
 
